[package]
name = "loki"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
ulid = "1.2.1"
dashmap = "5"
anyhow = "1.0.98"
async-trait = "0.1.88"

[[bin]]
name = "echo"
path = "src/bin/echo.rs"